[package]
name = "trash_cli"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
keywords = ["cli"]
repository = "https://github.com/k-nasa/trash_cli"
license-file = "LICENSE"
readme = "README.md"
description = "Command line tool to move files to trash"

[dependencies]
clap = "2"
dirs = "1"
toml = "0.4.8"
serde = "1"
serde_derive = "1"
